--- a/public/landing.html
+++ b/public/landing.html
@@ -2,26 +2,27 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Foodhub</title>
     <link rel="stylesheet" href="additional_styles.css">
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="<link href='https://fonts.googleapis.com/css?family=Passion+One:400,700,900' rel='stylesheet' type='text/css'>">
+    <link href='https://fonts.googleapis.com/css?family=Passion+One' rel='stylesheet' type='text/css'>
   </head>
+
   <body>
 
   <table class="main-content">
 
     <!--Navigation-->
-    <tr class=navbar>
+    <tr class="navbar">
       <td colspan=10 class="navbar-title">
         <a>FOODHUB</a>
       </td>
       <td colspan=1 class="navbar">
         <a>Sign In</a>
       </td>
-      <td colspan=1 class="navbar-icon">
-        <a><i class="fa fa-shopping-bag"></i></a>
+      <td colspan=1 class="navbar">
+        <a><i class="fa fa-shopping-bag fa-lg"></i></a>
       </td>
     </tr>
 
@@ -56,17 +57,17 @@
     <!--How to Content-->
     <tr>
       <td colspan=4 class="how-to-cell">
-        <img src="map.jpg" alt="" class="how-to-image">
+        <img src="map.jpg" alt="" class="how-to-image margin-below-bottom-sm">
         <h4>The where</h4>
         <p>Browse menus from your favorite local restaurants.</p>
       </td>
       <td colspan=4 class="how-to-cell">
-        <img src="menu.jpg" alt="" class="how-to-image">
+        <img src="menu.jpg" alt="" class="how-to-image margin-below-bottom-sm">
         <h4>The what</h4>
         <p>Select what you want to eat. Submit your order.</p>
       </td>
       <td colspan=4 class="how-to-cell">
-        <img src="delivery.jpg" alt="" class="how-to-image">
+        <img src="delivery.jpg" alt="" class="how-to-image margin-below-bottom-sm">
         <h4>The delivery</h4>
         <p>Get the door and enjoy your food!</p>
       </td>
@@ -107,9 +108,10 @@
     <tr>
       <td colspan=12 class="download">
         <h2>Download apps</h2>
-        <p>Millions of users and we want to befriend each one. 900+ cities and more than 35,000 restaurants.</p>
+        <p class="tagline">Millions of users and we want to befriend each one. 900+ cities and more than 35,000 restaurants.</p>
         <div>
-          <img src="app-store-badge.png" alt="" class="badge"> <img src="google-play-badge.png" alt="" class=badge>
+          <img src="app-store-badge.png" alt="" class="badge margin-below-bottom-xs">
+          <img src="google-play-badge.png" alt="" class="badge margin-below-bottom-xs">
         </div>
       </td>
     </tr>
@@ -124,17 +126,17 @@
     <!--Why order content-->
     <tr class="why-order-row">
       <td colspan=4 class="why-order-cell">
-        <img src="gem.jpg" alt="" class="why-order-image">
+        <img src="gem.jpg" alt="" class="why-order-image margin-below-bottom-sm">
         <h4>Discover</h4>
         <p>We'll help you find hidden gems in your neighborhood.</p>
       </td>
       <td colspan=4 class="why-order-cell">
-        <img src="like.jpg" alt="" class="why-order-image">
+        <img src="like.jpg" alt="" class="why-order-image margin-below-bottom-sm">
         <h4>Better</h4>
         <p>The more you use Foodhub, the better we are at making recommendations just for you.</p>
       </td>
       <td colspan=4 class="why-order-cell">
-        <img src="bite.jpg" alt="" class="why-order-image">
+        <img src="bite.jpg" alt="" class="why-order-image margin-below-bottom-sm">
         <h4>Food</h4>
         <p>Enjoy each bite all the more knowing your order supports local businesses.</p>
       </td>
@@ -158,10 +160,10 @@
           <input type="email" placeholder="Email">
         </div>
         <div>
-          <input type="number" placeholder="Zip Code">
+          <input type="number" placeholder="ZIP code">
         </div>
         <div>
-          <button>Send me Treats</button>
+          <button>Send me treats</button>
         </div>
       </td>
       <td colspan=3>
@@ -187,7 +189,7 @@
           <li class="li-footer">Facebook</li>
           <li class="li-footer">Twitter</li>
           <li class="li-footer">Instagram</li>
-          <li class="li-footer">Youtube</li>
+          <li class="li-footer">YouTube</li>
         </ul>
       </td>
       <td colspan=3>
