--- a/public/landing.html
+++ b/public/landing.html
@@ -5,31 +5,36 @@
   <title>Foodhub</title>
   <link rel="stylesheet" href="additional_style.css">
   <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Passion+One:400,900,700' rel='stylesheet' type='text/css'>
   <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css'>
 </head>
 <body>
 
-
   <table class="main-content">
-
     <tr> <!-- Navigation -->
-      <td colspan="6">
-        FOODHUB
+      <td colspan="10" class="navbar">
+        <a class="logo" href="https://www.google.com/">
+          FOODHUB
+        </a>
       </td>
-      <td colspan="3">
-        Sign in
+      <td class="navbar">
+        <a href="https://www.google.com/">
+          Sign In
+        </a>
       </td>
-      <td colspan="3">
-        <i class="fa fa-shopping-bag"></i>
+      <td class="navbar">
+        <a href="https://www.google.com/">
+          <i class="fa fa-shopping-bag fa-lg"></i>
+        </a>
       </td>
     </tr>
 
     <tr> <!-- Hero image -->
       <td colspan="12" class="hero">
         <div>
-          <h1>
+          <h2>
             Who delivers in your neighborhood?
-          </h1>
+          </h2>
         </div>
         <form>
           <div>
@@ -38,7 +43,7 @@
             </label>
           </div>
           <i class="fa fa-map-marker"></i>
-          <input type="text"></form>
+          <input type="text" placeholder="Street address, city, state">
         </form>
         <button>Find Food</button>
       </td>
@@ -56,8 +61,8 @@
     </tr>
 
     <tr> <!-- How to content -->
-      <td colspan="4" class="how-to-cell">
-        <img src="map.jpg" alt="" class="how-to-image">
+      <td colspan="4" class="how-to-cell vertical-top">
+        <img src="map.jpg" alt="" class="how-to-image add-bottom-margin">
         <h4>
           The where
         </h4>
@@ -65,8 +70,8 @@
           Browse menus from your favorite local restaurants.
         </p>
       </td>
-      <td colspan="4" class="how-to-cell">
-        <img src="menu.jpg" alt="" class="how-to-image">
+      <td colspan="4" class="how-to-cell vertical-top">
+        <img src="menu.jpg" alt="" class="how-to-image add-bottom-margin">
         <h4>
           The what
         </h4>
@@ -74,8 +79,8 @@
           Select what you want to eat. Submit your order.
         </p>
       </td>
-      <td colspan="4" class="how-to-cell">
-        <img src="delivery.jpg" alt="" class="how-to-image">
+      <td colspan="4" class="how-to-cell vertical-top">
+        <img src="delivery.jpg" alt="" class="how-to-image add-bottom-margin">
         <h4>
           The delivery
         </h4>
@@ -86,76 +91,171 @@
     </tr>
 
     <tr> <!-- Sound bites heading -->
-      <td colspan="12">
-        9
+      <td colspan="12" class="heading-row sound-bites">
+        <h2>
+          Sound bites
+        </h2>
       </td>
     </tr>
 
     <tr> <!-- Sound bites content -->
-      <td colspan="3">
-        10
+      <td colspan="3" class="user-cell sound-bites vertical-top">
+        <img src="user-1.jpg" alt="" class="user-image">
+        <p>
+          @Foodhub I love you, Foodhub! Just ordered me some grub, and I tell you, you folks make that part of my life easy. Thanks!
+        </p>
+        <h4>
+          @xtinacousins
+        </h4>
       </td>
-      <td colspan="3">
-        11
+      <td colspan="3" class="user-cell sound-bites vertical-top">
+        <img src="user-2.jpg" alt="" class="user-image">
+        <p>
+          Made my first @Foodhub order today. So great to be able to order food and not have to talk to anyone.
+        </p>
+        <h4>
+          @udezekene
+        </h4>
       </td>
-      <td colspan="3">
-        12
+      <td colspan="3" class="user-cell sound-bites vertical-top">
+        <img src="user-3.jpg" alt="" class="user-image">
+        <p>
+          Shout out to Foodhub for making my life so so easy.
+        </p>
+        <h4>
+          @adellecharles
+        </h4>
       </td>
-      <td colspan="3">
-        13
+      <td colspan="3" class="user-cell sound-bites vertical-top">
+        <img src="user-4.jpg" alt="" class="user-image">
+        <p>
+          Seriously, @Foodhub makes it easy for my coworkers and I to order food and get it to our office in a jiffy. FOOD!
+        </p>
+        <h4>
+          @vista
+        </h4>
       </td>
     </tr>
 
     <tr> <!-- Download apps -->
-      <td colspan="12">
-        14
+      <td colspan="12" class="download-hero">
+        <h2>
+          Download apps
+        </h2>
+        <p class="tagline">
+          Millions of users and we want to befriend each one. 900+ cities and more than 35,000 restaurants.
+        </p>
+        <img src="app-store-badge.png" class="app-image">
+        <img src="google-play-badge.png" class="app-image">
       </td>
     </tr>
 
     <tr> <!-- Why order heading-->
-      <td colspan="12">
-        15
+      <td colspan="12" class="heading-row why-order">
+        <h2>
+          Why order with Foodhub?
+        </h2>
       </td>
     </tr>
 
     <tr> <!-- Why order content -->
-      <td colspan="4">
-        16
+      <td colspan="4" class="how-to-cell vertical-top why-order">
+        <img src="gem.jpg" alt="" class="how-to-image add-bottom-margin">
+        <h4>
+          Discover
+        </h4>
+        <p>
+          We'll help you find hidden gems in your neighborhood.
+        </p>
       </td>
-      <td colspan="4">
-        17
+      <td colspan="4" class="how-to-cell vertical-top why-order">
+        <img src="like.jpg" alt="" class="how-to-image add-bottom-margin">
+        <h4>
+          Better
+        </h4>
+        <p>
+          The more you use Foodhub, the better we are at making recommendations just for you.
+        </p>
       </td>
-      <td colspan="4">
-        18
+      <td colspan="4" class="how-to-cell vertical-top why-order">
+        <img src="bite.jpg" alt="" class="how-to-image add-bottom-margin">
+        <h4>
+          Food
+        </h4>
+        <p>
+          Enjoy each bite all the more knowing your order supports local businesses.
+        </p>
       </td>
     </tr>
 
     <tr> <!-- About -->
-      <td colspan="6">
-        19
+      <td colspan="6" class="heading-row vertical-top">
+        <h2>
+          About Foodhub
+        </h2>
       </td>
       <td colspan="6">
-        20
+        <p>
+        Foodhub helps you find and order food from wherever you are. How it works: you type in an address, we tell you the restaurants that deliver to that locale as well as showing you droves of pickup restaurants near you. Want to be more specific? Search by cuisine, restaurant name or menu item. We'll filter your results accordingly. When you find what you're looking for, you can place your order online or by phone, free of charge. Oh, and we also give you access to reviews, coupons, special deals and a 24/7 customer care team that tracks each order and makes sure you get exactly what you want.
+      </p>
       </td>
     </tr>
 
     <tr> <!-- Footer -->
-      <td colspan="3">
-        21
+      <td colspan="3" class="footer-background vertical-top">
+        <h4 class="footer-sub-header">
+          Sign up for special offers
+        </h4>
+        <form>
+          <input type="text" placeholder="Email">
+        </form>
+        <form>
+          <input type="text" placeholder="Zip code">
+        </form>
+        <button>Send me treats</button>
       </td>
-      <td colspan="3">
-        22
+      <td colspan="3" class="footer-background vertical-top">
+        <h4 class="footer-sub-header">
+          Get to know us
+        </h4>
+        <ul>
+          <li class="footer-li">About Grubhub</li>
+          <li class="footer-li">Our apps</li>
+          <li class="footer-li">Our blog</li>
+          <li class="footer-li">Careers</li>
+          <li class="footer-li">Investor relations</li>
+          <li class="footer-li">News</li>
+        </ul>
       </td>
-      <td colspan="3">
-        23
+      <td colspan="3" class="footer-background vertical-top">
+        <h4 class="footer-sub-header">
+          Help
+        </h4>
+        <ul>
+          <li class="footer-li">FAQ</li>
+          <li class="footer-li">Contact us</li>
+        </ul>
+        <h4 class="footer-sub-header">
+          Connect with us
+        </h4>
+        <ul>
+          <li class="footer-li">Facebook</li>
+          <li class="footer-li">Twitter</li>
+          <li class="footer-li">Instagram</li>
+          <li class="footer-li">YouTube</li>
+        </ul>
       </td>
-      <td colspan="3">
-        24
+      <td colspan="3" class="footer-background vertical-top">
+        <h4 class="footer-sub-header">
+          Partner with us
+        </h4>
+        <ul>
+          <li class="footer-li">For restaurants</li>
+          <li class="footer-li">For drivers</li>
+          <li class="footer-li">For corporate accounts</li>
+        </ul>
       </td>
     </tr>
-
   </table>
-
-
 </body>
 </html>
