--- a/public/landing.html
+++ b/public/landing.html
@@ -12,13 +12,13 @@
 
   <table class="main-content">
     <tr> <!--Navigation---->
-      <td colspan="6">
+      <td colspan="6" class="navbar">
         FOODHUB
       </td>
-      <td colspan="3">
+      <td colspan="3" class="navbar">
         Sign In
       </td>
-      <td colspan="3">
+      <td colspan="3" class="navbar">
         <i class="fa fa-shopping-bag"></i>
       </td>
     </tr>
@@ -34,7 +34,7 @@
           <i class="fa fa-map-marker"></i><input type=“text”>
         </div>
         <div><button>Find Food</button></div>
-        <div>
+
         </td>
       </tr>
       <tr><!--header---->
@@ -119,42 +119,84 @@
         </td>
       </tr>
       <tr><!--why header---->
-        <td colspan="12">
-          why foodhub header
+        <td colspan="12" class="heading-row">
+          <h2>Why order with Foodhub?</h2>
         </td>
       </tr>
       <tr><!--3 reasons---->
-        <td colspan="4">
-          14
+        <td colspan="4" class="why-cell">
+          <img src="gem.jpg" alt="" class="why-images">
+          <h4>Discover</h4>
+          <p>
+            We'll help you find hidden gems in your neighborhood.
+          </p>
+
         </td>
-        <td colspan="4">
-          15
+        <td colspan="4" class="why-cell">
+          <img src="like.jpg" alt="" class="why-images">
+          <h4>Better</h4>
+          <p>
+            The more you use Foodhub, the better we are at making recommendations just for you.
+          </p>
         </td>
-        <td colspan="4">
-          16
+        <td colspan="4" class="why-cell">
+          <img src="bite.jpg" alt="" class="why-images">
+          <h4>Food</h4>
+          <p>
+          Enjoy each bite all the more knowing your order supports local businesses.
+          </p>
         </td>
       </tr>
       <tr><!--about 2---->
-        <td colspan="6">
-          17
+        <td colspan="6" class="why-cell">
+          <h2>About Foodhub</h2>
         </td>
         <td colspan="6">
-          18
+        <p>Foodhub helps you find and order food from wherever you are. How it works: you type in an address, we tell you the restaurants that deliver to that locale as well as showing you droves of pickup restaurants near you. Want to be more specific? Search by cuisine, restaurant name or menu item. We'll filter your results accordingly. When you find what you're looking for, you can place your order online or by phone, free of charge. Oh, and we also give you access to reviews, coupons, special deals and a 24/7 customer care team that tracks each order and makes sure you get exactly what you want.</p>
+
         </td>
 
       </tr>
       <tr><!--contact 4---->
-        <td colspan="3">
-          19
+        <td colspan="3" class="footer">
+<h4 class="h4-footer">Sign up for special offers</h4>
+<div><input type=“text” placeholder=
+"Email">
+<input type=“text” placeholder=
+"ZIP code"></div>
+<div>
+  <button>Send me treats</button></div>
+
+                  </td>
+        <td colspan="3" class="footer">
+          <h4 class="h4-footer">Get to know us</h4>
+
+  <ul>
+    <li class="li-footer">About Grubhub</li>
+  <li class="li-footer">Our apps</li>
+  <li class="li-footer">Our blog</li>
+  <li class="li-footer">Careers</li>
+  <li class="li-footer">Investor relations</li>
+  <li class="li-footer">News</li>
+</ul>
         </td>
-        <td colspan="3">
-          20
+        <td colspan="3" class="footer">
+          <h4 class="h4-footer">Help</h4>
+
+  <li class="li-footer">FAQ</li>
+  <li class="li-footer">Contact us</li>
+<h4 class="h4-footer">Connect with us</h4>
+
+  <li class="li-footer">Facebook</li>
+  <li class="li-footer">Twitter</li>
+  <li class="li-footer">Instagram</li>
+  <li class="li-footer">YouTube</li>
         </td>
-        <td colspan="3">
-          21
-        </td>
-        <td colspan="3">
-          22
+        <td colspan="3" class="footer">
+          <h4 class="h4-footer">Partner with us</h4>
+<li class="li-footer">For restaurants</li>
+<li class="li-footer">For drivers</li>
+<li class="li-footer">For corporate accounts</li>
         </td>
       </tr>
 
