--- a/public/landing.html
+++ b/public/landing.html
@@ -7,20 +7,22 @@
   <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" media="screen" title="no title" charset="utf-8">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Passion+One" media="screen" title="no title" charset="utf-8">
+
 </head>
 <body>
 
   <table class="main-content">
     <tr> <!-- Navigation -->
-      <td colspan="6">
+      <td colspan="6" class="headercolor">
         FOODHUB
       </td>
 
-      <td colspan="3">
+      <td colspan="3" class="sideheader">
         Sign In
       </td>
 
-      <td colspan="3">
+      <td colspan="3" class="sideheader">
         <i class="fa fa-shopping-bag"></i>
       </td>
     </tr>
@@ -37,7 +39,8 @@
           </div>
 
           <div>
-            <input type="text">
+            <i class="fa fa-map-marker"></i>
+            <input type="text" placeholder="Street address, city, state">
           </div>
 
           <button>Find Food</button>
@@ -54,7 +57,7 @@
     </tr>
 
     <tr> <!-- How To Content -->
-      <td colspan="4" class="how-to-cell">
+      <td colspan="4" class="how-to-cell2">
         <img src="map.jpg" alt="" class="how-to-image">
         <h4>
           The where
@@ -65,93 +68,210 @@
         </p>
       </td>
 
-      <td colspan="4" class="how-to-cell">
+      <td colspan="4" class="how-to-cell2">
         <img src="menu.jpg" alt="" class="how-to-image">
+        <h4>
+          The what
+        </h4>
+
+        <p>
+          Select what you want to eat. Submit your order.
+        </p>
+
       </td>
 
-      <td colspan="4" class="how-to-cell">
+      <td colspan="4" class="how-to-cell2">
         <img src="delivery.jpg" alt="" class="how-to-image">
+        <h4>
+          The delivery
+        </h4>
+
+        <p>
+          Get the door and enjoy your food!
+        </p>
       </td>
     </tr>
 
     <tr> <!-- Sound Bites Heading -->
-      <td colspan="12">
-        heading
+      <td colspan="12" class="heading-row2">
+        <h2>Soundbites</h2>
       </td>
     </tr>
 
     <tr> <!-- Sound Bites Content -->
-      <td colspan="3">
-        9
-      </td>
+      <td colspan="3" class="how-to-cell">
+        <img src="user-1.jpg" alt="" class="how-to-content">
+        <p>
+          @Foodhub I love you, Foodhub! Just ordered me some grub, and I tell you, you folks make that part of my life easy. Thanks!        </p>
 
-      <td colspan="3">
-        10
-      </td>
+          <h4>
+            @xtinacousins
+          </h4>
+        </td>
 
-      <td colspan="3">
-        11
-      </td>
+        <td colspan="3" class="how-to-cell">
+          <img src="user-2.jpg" alt="" class="how-to-content">
+          <p>
+            Made my first @Foodhub order today. So great to be able to order food and not have to talk to anyone.
+          </p>
 
-      <td colspan="3">
-        12
-      </td>
-    </tr>
+          <h4>
+            @udezekene
+          </h4>
+        </td>
 
-    <tr> <!-- Download Apps -->
-      <td colspan="12">
-        heading
-      </td>
-    </tr>
+        <td colspan="3" class="how-to-cell">
+          <img src="user-3.jpg" alt="" class="how-to-content">
+          <p>
+            Shout out to Foodhub for making my life so so easy.
+          </p>
 
-    <tr> <!-- Why Order Heading -->
-      <td colspan="12">
-        heading
-      </td>
-    </tr>
+          <h4>
+            @adellecharles
 
-    <tr> <!-- Why Order Content -->
-      <td colspan="4">
-        6
-      </td>
+          </h4>
+        </td>
 
-      <td colspan="4">
-        7
-      </td>
+        <td colspan="3" class="how-to-cell">
+          <img src="user-4.jpg" alt="" class="how-to-content">
+          <p>
+            Seriously, @Foodhub makes it easy for my coworkers and I to order food and get it to our office in a jiffy. FOOD!
+          </p>
 
-      <td colspan="4">
-        8
-      </td>
-    </tr>
+          <h4>
+            @vista
+          </h4>
+        </td>
+      </tr>
 
-    <tr> <!-- About -->
-      <td colspan="6">
-        1
-      </td>
+      <tr> <!-- Download Apps -->
+        <td colspan="12" class="app-page">
+          <h2>
+            Download apps
+          </h2>
 
-      <td colspan="6">
-        2
-      </td>
-    </tr>
+          <form>
+            <div>
+              <p class="appwords"> Millions of users and we want to befriend each one. 900+ cities and more than 35,000 restaurants.</p>
+            </div>
+            <img src="app-store-badge.png" class=badge-style>
+            <img src="google-play-badge.png" class=badge-style>
 
-    <tr> <!-- Footer -->
-      <td colspan="3">
-        9
-      </td>
+          </form>
+        </td>
+      </tr>
 
-      <td colspan="3">
-        10
-      </td>
+      <tr> <!-- Why Order Heading -->
+        <td colspan="12" class="heading-row2">
+          <h2>Why order with Foodhub?</h2>
+        </td>
+      </tr>
 
-      <td colspan="3">
-        11
-      </td>
+      <tr> <!-- Why Order Content -->
+        <td colspan="4" class="how-to-cell3">
+          <img src="gem.jpg" alt="" class="how-to-image">
+          <h4>
+            Discover
+          </h4>
 
-      <td colspan="3">
-        12
-      </td>
-    </tr>
-  </table>
+          <p>
+            We'll help you find hidden gems in your neighborhood.          </p>
+          </td>
 
-</body>
-</html>
+          <td colspan="4" class="how-to-cell3">
+            <img src="like.jpg" alt="" class="how-to-image">
+            <h4>
+              Better
+            </h4>
+
+            <p>
+              The more you use Foodhub, the better we are at making recommendations just for you.          </p>
+
+            </td>
+
+            <td colspan="4" class="how-to-cell3">
+              <img src="bite.jpg" alt="" class="how-to-image">
+              <h4>
+                Food
+              </h4>
+
+              <p>
+                Enjoy each bite all the more knowing your order supports local businesses.
+              </p>
+            </td>
+          </tr>
+
+          <tr> <!-- About -->
+            <td colspan="6" class="heading-row">
+              <h2>About Foodhub</h2>
+            </td>
+
+            <td colspan="6">
+              <p>
+                Foodhub helps you find and order food from wherever you are. How it works: you type in an address, we tell you the restaurants that deliver to that locale as well as showing you droves of pickup restaurants near you. Want to be more specific? Search by cuisine, restaurant name or menu item. We'll filter your results accordingly. When you find what you're looking for, you can place your order online or by phone, free of charge. Oh, and we also give you access to reviews, coupons, special deals and a 24/7 customer care team that tracks each order and makes sure you get exactly what you want.
+              </p>
+            </td>
+          </tr>
+
+          <tr> <!-- Footer -->
+            <td colspan="3" class="footerstyle">
+              <h4>Sign me up for special offers</h4>
+              <form>
+
+
+                <div>
+                  <input type="text" placeholder="Email">
+                  <input type="text" placeholder="ZIP code">
+
+                </div>
+
+                <button>Send me treats</button>
+              </form>
+            </td>
+
+            <td colspan="3" class="footerstyle">
+              <h4>Get to know us</h4>
+
+              <ul>
+                <li>About Foodhub</li>
+                <li>Our apps</li>
+                <li>Our blog</li>
+                <li>Careers</li>
+                <li>Investor relations</li>
+                <li>News</li>
+              </ul>
+
+            </td>
+
+            <td colspan="3" class="footerstyle">
+              <h4>Help</h4>
+
+              <ul>
+                <li>FAQ</li>
+                <li>Contact us</li>
+              </ul>
+              <h4>Connect with us</h4>
+
+              <ul>
+                <li>Facebook</li>
+                <li>Twitter/li>
+                  <li>Instagram</li>
+                  <li>YouTube</li>
+                </ul>
+
+              </td>
+
+              <td colspan="3" class="footerstyle">
+                <h4>Partner with us</h4>
+
+                <ul>
+                  <li>For restaurants</li>
+                  <li>For drivers</li>
+                  <li>For corporate accounts</li>
+                </ul>
+              </td>
+            </tr>
+          </table>
+
+        </body>
+        </html>
