--- a/public/landing.html
+++ b/public/landing.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Foodhub</title>
   <link rel="stylesheet" href="additional_styles.css">
+  <link href='https://fonts.googleapis.com/css?family=Passion+One' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
@@ -11,22 +12,28 @@
 <body>
   <table class="main-content">
     <tr> <!--Navigation-->
-      <td colspan="6">
-        FOODHUB
+      <td colspan="10" class="navbar-a">
+        <a class="navbar-a" href="https://www.google.com">
+          FOODHUB
+        </a>
       </td>
 
-      <td colspan="3">
-        Sign In
+      <td class="navbar-b">
+        <a class="navbar-b" href="https://www.google.com">
+          Sign In
+        </a>
       </td>
 
-      <td colspan="3">
-        <i class="fa fa-shopping-bag"></i>
+      <td class="navbar-c">
+        <a class="navbar-c" href="https://www.google.com">
+          <i class="fa fa-shopping-bag fa-lg"></i>
+        </a>
       </td>
 
     </tr>
 
     <tr> <!--Hero-->
-      <td colspan="12" class="hero">
+      <td colspan="12" class="hero centered">
 
         <h1>
           Who delivers in your neighborhood?
@@ -38,7 +45,9 @@
           </div>
 
           <div>
-            <input type="text">
+            <div class="input-group">
+              <i class="fa fa-map-marker"></i>
+              <input type="text" placeholder="Street address, city, state">
           </div>
           <button>Find Food</button>
         </form>
@@ -46,7 +55,7 @@
     </tr>
 
     <tr> <!--How-To Heading-->
-      <td colspan="12" class="heading-row">
+      <td colspan="12" class="heading-row centered">
         <h2>How to Foodhub</h2>
         <p>Ordering from your favorite restaurant is even easier than eating.</p>
       </td>
@@ -54,19 +63,19 @@
 
     <tr> <!--How-To Content-->
       <td colspan="4" class="how-to-cell">
-        <img src="map.jpg" alt="" class="how-to-image">
+        <img src="map.jpg" alt="" class="how-to-image margin-below-bottom-sm">
         <h4>The where</h4>
         <p>Browse menus from your favorite local restaurants.</p>
       </td>
 
       <td colspan="4" class="how-to-cell">
-        <img src="menu.jpg" alt="" class="how-to-image">
+        <img src="menu.jpg" alt="" class="how-to-image margin-below-bottom-sm">
         <h4>The what</h4>
         <p>Select what you want to eat. Submit your order.</p>
       </td>
 
       <td colspan="4" class="how-to-cell">
-        <img src="delivery.jpg" alt="" class="how-to-image">
+        <img src="delivery.jpg" alt="" class="how-to-image margin-below-bottom-sm">
         <h4>The delivery</h4>
         <p>Get the door and enjoy your food!</p>
       </td>
@@ -106,7 +115,7 @@
         <h1> Download apps </h1>
         <p>
           Millions of users and we want to befriend each one. 900+ cities and more than 35,000 restaurants.
-          <p><img src="app-store-badge.png" alt="" class="app-badge"> <img src="google-play-badge.png" alt="" class="app-badge"></p>
+          <p><img src="app-store-badge.png" alt="" class="app-badge margin-below-bottom-xs"> <img src="google-play-badge.png" alt="" class="app-badge margin-below-bottom-xs"></p>
         </p>
       </td>
     </tr>
@@ -118,36 +127,85 @@
     </tr>
 
     <tr> <!--Why Order Content-->
-      <td colspan="4">
-        16
+      <td colspan="4" class="why-order-content">
+        <img src="gem.jpg" alt="" class="why-order-image margin-below-bottom-sm">
+        <h4>Discover</h4>
+        <p>
+          We'll help you find hidden gems in your neighborhood.
+        </p>
       </td>
-      <td colspan="4">
-        17
+      <td colspan="4" class="why-order-content">
+        <img src="like.jpg" alt="" class="why-order-image margin-below-bottom-sm">
+        <h4>Better</h4>
+        <p>
+          The more you use Foodhub, the better we are at making recommendations just for you.
+        </p>
       </td>
-      <td colspan="4">
-        18
+      <td colspan="4" class="why-order-content">
+        <img src="bite.jpg" alt="" class="why-order-image margin-below-bottom-sm">
+        <h4>Food</h4>
+        <p>
+          Enjoy each bite all the more knowing your order supports local businesses.
+        </p>
       </td>
     </tr>
 
     <tr> <!--About-->
-      <td colspan="6">
-        19
+      <td colspan="6" class="centered">
+        <h2>About Foodhub</h2>
       </td>
       <td colspan="6">
-        20
+        Foodhub helps you find and order food from wherever you are. How it works: you type in an address, we tell you the restaurants that deliver to that locale as well as showing you droves of pickup restaurants near you. Want to be more specific? Search by cuisine, restaurant name or menu item. We'll filter your results accordingly. When you find what you're looking for, you can place your order online or by phone, free of charge. Oh, and we also give you access to reviews, coupons, special deals and a 24/7 customer care team that tracks each order and makes sure you get exactly what you want.
       </td>
     </tr>
 
     <tr> <!--Footer-->
-      <td colspan="3">
-        21
+      <td colspan="3" class="footer">
+        Sign up for special offers
+        <form>
+          <div class="form-group">
+            <input type="email" placeholder="Email">
+          </div>
+
+          <div class="form-group">
+            <input type="number" placeholder="ZIP code">
+          </div>
+
+          <button type="submit" class="primary-button">Send me treats</button>
+        </form>
       </td>
-      <td colspan="3">
-        22
+      <td colspan="3" class="footer">
+        Get to know us
+        <ul>
+          <li class="list-footer">About Grubhub</li>
+          <li class="list-footer">Our apps</li>
+          <li class="list-footer">Our blog</li>
+          <li class="list-footer">Careers</li>
+          <li class="list-footer">Investor relations</li>
+          <li class="list-footer">News</li>
+        </ul>
       </td>
-      <td colspan="3">
+      <td colspan="3" class="footer">
+        Help
+        <ul>
+          <li class="list-footer">FAQ</li>
+          <li class="list-footer">Contact us</li>
+        </ul>
+        Connect with us
+        <ul>
+          <li class="list-footer">Facebook</li>
+          <li class="list-footer">Twitter</li>
+          <li class="list-footer">Instagram</li>
+          <li class="list-footer">YouTube</li>
+        </ul>
       </td>
-      <td colspan="3">
+      <td colspan="3" class="footer">
+        Partner with us
+        <ul>
+          <li class="list-footer">For restaurants</li>
+          <li class="list-footer">For drivers</li>
+          <li class="list-footer">For corporate accounts</li>
+        </ul>
       </td>
     </tr>
 
